<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EnterCodeFragment">


    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_image"
        android:layout_marginTop="@dimen/margin_app_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tv_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/normalTextSize"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register" />

    <TextView
        android:id="@+id/tv_register_text_me_sent"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal_norm"
        android:gravity="center"
        android:text="@string/register_text_we_sent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_code"
        tools:layout_editor_absoluteX="10dp">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_input_code"
        style="@style/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_text_me_sent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_input_code"
            style="@style/edit_text_text"
            android:gravity="center"
            android:hint="@string/register_hint_default_code"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>